--- a/ansible/host_vars/rtr01.addeo.net.yml
+++ b/ansible/host_vars/rtr01.addeo.net.yml
@@ -1,5 +1,6 @@
 ---
 device_hostname: rtr01
+device_description: Core Router
 device_type: pfSense Router
 device_model: DELL R210ii
 device_interfaces:
@@ -9,21 +10,20 @@ device_interfaces:
     ip: 10.1.10.1
     mac: D4:AE:52:C6:51:11
     default: true
+  - name: idrac
+    description: "iDrac Interface (not working)"
+    ip: 10.1.10.2
+    mac: ~
 
 # DNS Record Configuration.
+dns_default_record: false
+dns_mgmt_interface: idrac
 dns_records:
-  - host: rtr01
-    domain: addeo.net
-    ip: 10.1.10.1
-    descr: pfSense
+  - host: "{{ device_hostname }}"
+    domain: "{{ dns_domain }}"
+    ip: "{{ device_ip }}"
+    descr: "{{ device_description }}"
     aliases:
-      - host: rtr01.prd.ado
-        domain: addeo.net
-        description: rtr01.prd.ado
       - host: pfsense
-        domain: addeo.net
-        description: pfsense
-  - host: rtr01.mgmt
-    domain: addeo.net
-    ip: 10.1.10.2
-    descr: "iDrac: rtr01 (not working)"
+        domain: "{{ dns_domain }}"
+        description: "{{ device_description }}"
