--- a/ansible/host_vars/swt02.addeo.net.yml
+++ b/ansible/host_vars/swt02.addeo.net.yml
@@ -1,22 +1,13 @@
 ---
 # Device Information.
-device_name: Garage Switch
 device_hostname: swt02
+device_description: Garage Switch
 device_type: Unifi Switch 8 (PoE)
 device_model: US-8-60W (48W)
-device_vlan: MGMT
 device_interfaces:
   - ip: 10.1.10.6
     mac: E0:63:DA:C7:D3:84
     default: true
 
 # DNS Record Configuration.
-dns_records:
-  - host: swt02
-    domain: addeo.net
-    ip: 10.1.10.6
-    descr: Garage Switch
-    aliases:
-      - host: swt02.prd.ado
-        domain: addeo.net
-        description: swt02.prd.ado
+dns_default_record: true
