--- a/ansible/host_vars/ups01.addeo.net.yml
+++ b/ansible/host_vars/ups01.addeo.net.yml
@@ -1,21 +1,13 @@
 ---
 # Device Information.
 device_hostname: ups01
+device_description: Core UPS
 device_type: APC Smart-UPS 2200
 device_model: Smart-UPS 2200 RM
-device_vlan: MGMT
 device_interfaces:
   - ip: 10.1.10.10
     mac: 00:C0:B7:74:18:64
     default: true
 
 # DNS Record Configuration.
-dns_records:
-  - host: ups01
-    domain: addeo.net
-    ip: 10.1.10.10
-    descr: Core UPS
-    aliases:
-      - host: ups01.prd.ado
-        domain: addeo.net
-        description: ups01.prd.ado
+dns_default_record: true
