Fix pve nfs share version option
PVE UI sets vers=4.1, not nfsvers=4.1. So updated to use the expected
option name. Also needed to switch from 4 to 4.1 so that storage was
actually reported and it's marked as active in pve.

--- a/ansible/host_vars/cantilever.addeo.net.yml
+++ b/ansible/host_vars/cantilever.addeo.net.yml
@@ -175,4 +175,4 @@ pve_storages:
       - backup
     server: kilo.san.addeo.net
     export: /spool/data/backups/bruce.addeo.net
-    options: nfsvers=4
+    options: vers=4.1
