Rename local-vmpool pve storage to vmpool

--- a/ansible/group_vars/proxmox_servers.yml
+++ b/ansible/group_vars/proxmox_servers.yml
@@ -51,7 +51,7 @@ pve_acls:
     groups:
       - Administrators
 pve_storages:
-  - name: local-vmpool
+  - name: vmpool
     type: zfspool
     content:
       - images
