Add crimson pve node and setup clustering

--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -12,6 +12,8 @@ vlans:
     id: 112
   - name: SRVMGMT
     id: 115
+  - name: CLUSTER
+    id: 116
   - name: LAN
     id: 150
   - name: TRUSTEDWIFI
