--- a/k8s/infrastructure/controllers/metallb.yaml
+++ b/k8s/infrastructure/controllers/metallb.yaml
@@ -17,6 +17,22 @@ spec:
   interval: 24h
   url: https://metallb.github.io/metallb
 ---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: metallb-config
+  namespace: metallb-system
+spec:
+  interval: 5m0s
+  url: https://github.com/credativ/metallb
+  ref:
+    branch: metallb-config
+  ignore: |
+    # exclude all
+    /*
+    # include charts directory
+    !/charts/
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -33,3 +49,37 @@ spec:
         name: metallb
         namespace: metallb-system
       interval: 12h
+---
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
+metadata:
+  name: metallb-config
+  namespace: metallb-system
+spec:
+  dependsOn:
+    - name: metallb
+  interval: 30m
+  chart:
+    spec:
+      chart: ./charts/metallb-config
+      version: "*"
+      sourceRef:
+        kind: GitRepository
+        name: metallb-config
+      interval: 12h
+  values:
+    ipAddressPools:
+      - name: default
+        spec:
+          addresses:
+            - 10.1.15.94-10.1.15.96
+    l2Advertisements:
+      - name: default
+        spec:
+          ipAddressPools:
+            - default
+    bgpAdvertisements: []
+    bgpPeers: []
+    bfdProfiles: []
+    communities: []
+    frrConfigurations: []
