--- a/k8s/infrastructure/controllers/kustomization.yaml
+++ b/k8s/infrastructure/controllers/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - flux-operator.yaml
   - metallb.yaml
   - cert-manager.yaml
   - ingress-nginx.yaml
