Rename rancher-values to remove suffix

--- a/k8s/apps/production/kustomization.yaml
+++ b/k8s/apps/production/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - ../base/rancher
 patches:
-  - path: rancher-values.yaml
+  - path: rancher.yaml
     target:
       kind: HelmRelease
