--- a/k8s/infrastructure/controllers/onepassword-operator.yaml
+++ b/k8s/infrastructure/controllers/onepassword-operator.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: 1password
+  name: op-system
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
