--- a/k8s/clusters/staging/infrastructure.yaml
+++ b/k8s/clusters/staging/infrastructure.yaml
@@ -26,11 +26,29 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: infra-secrets
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: infra-controllers
+  interval: 10m
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./k8s/infrastructure/secrets
+  prune: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: infra-configs
   namespace: flux-system
 spec:
   dependsOn:
     - name: infra-controllers
+    - name: infra-secrets
   interval: 10m
   retryInterval: 1m
   timeout: 5m
