--- a/k8s/infrastructure/configs/cluster-issuers.yaml
+++ b/k8s/infrastructure/configs/cluster-issuers.yaml
@@ -3,6 +3,7 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: cloudflare-api-token
+  namespace: cert-manager
 spec:
   itemPath: vaults/k8s/items/ixoxvdpcqg2fktrpjeb2sr756a
 ---
@@ -10,5 +11,6 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: selfsigned
+  namespace: cert-manager
 spec:
   selfSigned: {}
