--- a/k8s/infrastructure/configs/cluster-issuers.yaml
+++ b/k8s/infrastructure/configs/cluster-issuers.yaml
@@ -21,7 +21,7 @@ spec:
     solvers:
       - dns01:
           cloudflare:
-            apiKeySecretRef:
+            apiTokenSecretRef:
               name: cloudflare-api-token
               key: credential
         selector:
