--- a/k8s/apps/base/rancher/release.yaml
+++ b/k8s/apps/base/rancher/release.yaml
@@ -17,5 +17,7 @@ spec:
   # https://github.com/rancher/rancher/blob/release/v2.8/chart/values.yaml
   values:
     ingress:
-      enabled: true
-      ingressClassName: nginx
+      tls:
+        source: secret
+      extraAnnotations:
+        cert-manager.io/cluster-issuer: letsencrypt
