--- a/k8s/infrastructure/storage/proxmox-csi.yaml
+++ b/k8s/infrastructure/storage/proxmox-csi.yaml
@@ -46,4 +46,4 @@ spec:
   valuesFrom:
     - kind: Secret
       name: proxmox-csi-values
-      valueKey: proxmox-csi-values.yaml
+      valuesKey: proxmox-csi-values.yaml
