Try post build substitutions

--- a/k8s/clusters/staging/infrastructure.yaml
+++ b/k8s/clusters/staging/infrastructure.yaml
@@ -39,6 +39,10 @@ spec:
     name: flux-system
   path: ./k8s/infrastructure/storage
   prune: true
+  postBuild:
+    substituteFrom:
+      - kind: Secret
+        name: proxmox-csi-token
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
