--- a/k8s/clusters/staging/infrastructure.yaml
+++ b/k8s/clusters/staging/infrastructure.yaml
@@ -26,27 +26,6 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: infra-storage
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: infra-controllers
-  interval: 10m
-  retryInterval: 1m
-  timeout: 5m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./k8s/infrastructure/storage
-  prune: true
-  postBuild:
-    substituteFrom:
-      - kind: Secret
-        name: proxmox-csi-token
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
   name: infra-configs
   namespace: flux-system
 spec:
@@ -60,3 +39,24 @@ spec:
     name: flux-system
   path: ./k8s/infrastructure/configs
   prune: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: infra-storage
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: infra-config
+  interval: 10m
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./k8s/infrastructure/storage
+  prune: true
+  postBuild:
+    substituteFrom:
+      - kind: Secret
+        name: proxmox-csi-token
