Fix dependency name

--- a/k8s/clusters/staging/infrastructure.yaml
+++ b/k8s/clusters/staging/infrastructure.yaml
@@ -47,7 +47,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: infra-config
+    - name: infra-configs
   interval: 10m
   retryInterval: 1m
   timeout: 5m
